Mission Manage Page

--- a/src/css/Common.css
+++ b/src/css/Common.css
@@ -1,9 +1,10 @@
 .menuTitle {
-    text-align: center;
+  text-align: center;
 }
 
 .mainContainerDiv {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
