--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10%;
+  margin-top: 7%;
 }
 
 .headerDiv {
@@ -42,4 +42,9 @@
   border-radius: 5px;
   cursor: pointer;
   margin-top: 20px;
+}
+
+.loginLogo {
+  width: 10%;
+  height: 10%;
 }
