--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -36,8 +36,8 @@
   width: 100%;
   align-self: center;
   padding: 10px;
-  background-color: #78179e;
-  color: white;
+  background-color: #ffcccc;
+  color: black;
   border: none;
   border-radius: 5px;
   cursor: pointer;
