--- a/src/css/Common.css
+++ b/src/css/Common.css
@@ -15,8 +15,15 @@
   margin: 5%;
 }
 
-
 /* Data Grid CSS */
 .MuiDataGrid-row.Mui-selected {
   background-color: #ffcccc !important; /* 클릭된 행의 연한 톤 핑크 */
+}
+
+.actionBtns {
+  text-align: right;
+}
+
+.actionBtns button {
+  margin: 5px;
 }
