--- a/src/css/HomeHeader.css
+++ b/src/css/HomeHeader.css
@@ -1,6 +1,7 @@
 .homeHeader {
-  margin-left: 10px;
-  margin-right: 10px;
+  /* margin-left: 10px; */
+  /* margin-right: 10px; */
+  margin: 10px;
 }
 
 .homeHeaderNav {
@@ -26,9 +27,9 @@
 }
 
 .headerLogo {
-  width: 5%;
-  height: 5%;
-  margin: -10px;
+  width: 7%;
+  height: 7%;
+  /* margin: -10px; */
   cursor: pointer;
 }
 
