--- a/src/css/Common.css
+++ b/src/css/Common.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 /* Data Grid CSS */
@@ -118,4 +118,43 @@
 .actionBtns .btnsDiv {
   display: flex;
   gap: 10px; /* 버튼 간의 간격 조정 */
+}
+
+/* 타입 버튼 컨테이너 스타일 */
+.actionBtns .typeButtons {
+  display: flex;
+  border: 1px solid #ddd; /* 테두리 추가 */
+  border-radius: 12px; /* 모서리 둥글기 */
+  padding: 10px; /* 내부 여백 */
+  background: #ffffff; /* 배경 색상 */
+}
+
+/* 타입 버튼 스타일 */
+.actionBtns .typeButtons .typeButton {
+  background: #ffffff; /* 배경 색상 */
+  border: none; /* 테두리 제거 */
+  border-radius: 8px; /* 모서리 둥글기 */
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1),
+    -4px -4px 8px rgba(255, 255, 255, 0.7); /* 뉴모피즘 음영 효과 */
+  color: #333; /* 텍스트 색상 */
+  padding: 8px 16px; /* 패딩 */
+  font-size: 14px; /* 폰트 크기 */
+  cursor: pointer; /* 포인터 커서 */
+  transition: all 0.2s ease; /* 부드러운 전환 효과 */
+  margin: 0 5px; /* 버튼 간의 간격 */
+  display: flex; /* 문구와 버튼을 한 줄에 배치 */
+  align-items: center; /* 버튼과 문구 수직 정렬 */
+}
+
+/* 버튼 활성화 상태 */
+.actionBtns .typeButtons .typeButton.active {
+  background: #e0e0e0; /* 활성화된 버튼 배경 색상 */
+  box-shadow: inset 4px 4px 8px rgba(0, 0, 0, 0.1),
+    inset -4px -4px 8px rgba(255, 255, 255, 0.7); /* 활성화된 버튼 음영 효과 */
+  color: #000; /* 활성화된 버튼 텍스트 색상 */
+}
+
+/* 타입 문구 스타일 */
+.actionBtns .typeButtons .typeButton b {
+  margin-right: 5px; /* 버튼과 문구 간의 간격 */
 }
